syntax = "proto3";

option java_multiple_files = true;
option java_package = "klattice.grpc";
option java_outer_classname = "KLExecProto";

package klattice.exec;

import "messages.proto";

service ExecService {
  rpc execute (klattice.msg.Plan) returns (klattice.msg.Batch) {};
}