syntax = "proto3";

option java_multiple_files = true;
option java_package = "klattice.grpc";
option java_outer_classname = "KLPlanProto";

package klattice.plan;

import "messages.proto";

service PlannerService {
    rpc Expand (klattice.msg.Plan) returns (klattice.msg.ExpandedPlan);
}